--- a/about.html
+++ b/about.html
@@ -36,14 +36,15 @@
                     <div class="profile-content-wrapper">
                         <h1>About me</h1>
                         <p>
-                            malding seething fuming vibing malding seething fuming vibing malding seething fuming vibing malding 
-                            seething fuming vibing malding seething fuming vibing malding seething fuming vibing malding seething 
-                            fuming vibing malding seething fuming vibing malding seething fuming vibing malding seething fuming vibing
+                            placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text 
+                            placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text 
                         </p>
 
                         <p>
-                            VIBING VIBING VIBING VIBING VIBING VIBING VIBING
-                            VIBING VIBING VIBING VIBING VIBING VIBING VIBING
+                            placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text 
+                            placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text
+                            placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text 
+                            placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text placeholder text 
                         </p>
                         
                     </div>
